# zolva

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-07-12-core-runtime.md  README.md
docs/specs/: 2026-07-12-zolva-design.md  2026-07-15-dashboard-design.md
examples/dashboard_demo/: README.md  live.py  seed.py
examples/dashboard_demo/agents/: collections.md  disputes.md  disputes.yaml  support.md  support.yaml
examples/mockbank/: bank.py  channels.yaml
examples/mockbank/agents/: collections.md  collections.yaml
scripts/: build_demo_page.py  build_llms_full.py
src/zolva/: __init__.py  _db.py  _judge.py  audit.py  bus.py  channels.py  channels_elevenlabs.py  cli.py  config.py  dashboard.html  dashboard.py  evals.py  feedback.py  guardrails.py  handover.py  orchestrator.py  redaction.py  serve.py  sessions.py  signing.py  synthetics.py  tools.py
src/zolva/bridge/: __init__.py  anthropic.py  fake.py  openai.py
tests/: test_anthropic_adapter.py  test_audit.py  test_audit_hardening.py  test_audit_store.py  test_autowire.py  test_bridge.py  test_bridge_retry.py  test_bus.py  test_channels.py  test_channels_elevenlabs.py  test_cli.py  test_cli_plugins.py  test_config.py  test_contact_frequency.py  test_dashboard.py  test_db.py  test_evals.py  test_feedback.py  test_guardrails.py  test_handoffs.py  test_handover.py  test_hardening.py  test_llms_docs.py  test_mockbank_e2e.py  test_openai_adapter.py  test_ops_hygiene.py  test_orchestrator.py  test_package.py  test_redaction.py  test_resume.py  test_review_fixes.py  test_serve.py  test_sessions.py  test_signing.py  test_synthetics.py  test_tools.py
website/: 404.html  index.html  package-lock.json  package.json  vite.config.js  wrangler.jsonc
website/contributing/: index.html
website/demo/: index.html
website/docs/: index.html
website/docs/dashboard/: index.html
website/legal/: index.html
website/playbooks/: index.html
website/playbooks/ci-gated-releases/: index.html
website/playbooks/cross-channel-contact-caps/: index.html
website/public/: _headers  llms-full.txt  llms.txt  robots.txt  sitemap.xml
website/security/: index.html
website/src/: main.js  styles.css
(+14 files in other folders)
