[project]
name = "zolva"
version = "0.1.0"
description = "Open-source, self-hosted agent platform for banks and fintechs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["pydantic>=2.7", "httpx>=0.27", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10", "types-PyYAML"]

[project.scripts]
zolva = "zolva.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zolva"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["zolva"]
mypy_path = "src"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
