[project]
name = "zolva"
version = "0.3.2"
description = "Open-source, self-hosted agent platform for banks and fintechs"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["agents", "llm", "banking", "fintech", "guardrails", "evals", "compliance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pydantic>=2.7", "httpx>=0.27", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://zolva.ai"

[project.optional-dependencies]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.scripts]
zolva = "zolva.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zolva"]

[tool.hatch.build.targets.sdist]
exclude = ["website/", "assets/", "docs/", ".github/", ".claude/", "scripts/", "llms.txt", "llms-full.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["zolva"]
mypy_path = "src"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
